--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,4 +1,20 @@
 <app-navbar></app-navbar>
+
+<div
+  *ngIf="messageError"
+  class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
+  role="alert"
+>
+<span class="font-medium">DANGER: </span> Failed to send email.
+</div>
+<div
+  *ngIf="messageSent"
+  class="p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+  role="alert"
+>
+<span class="font-medium">SUCCESS: </span> Email sent.
+</div>
+
 <section class="dark:bg-gray-900">
   <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
     <h2
