--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -8,15 +8,11 @@
         [ngClass]="{
           'mb-6 lg:mb-0': i % 3 !== 2
         }"
+        class="justify-center"
       >
         <div class="bg-white block rounded-lg shadow-lg">
           <div class="relative overflow-hidden bg-no-repeat bg-cover">
-            <img [src]="member.image" class="w-full rounded-t-lg"/>
-            <a href="#!">
-              <div
-                class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed"
-              ></div>
-            </a>
+            <img [src]="member.image" class="w-full rounded-t-lg" />
             <svg
               class="absolute"
               xmlns="http://www.w3.org/2000/svg"
@@ -29,7 +25,7 @@
               ></path>
             </svg>
           </div>
-          <div class="p-6">
+          <div class="p-3">
             <h5 class="text-lg font-bold mb-2">{{ member.name }}</h5>
             <h6 class="font-medium text-blue-600 mb-4">{{ member.role }}</h6>
             <p>
