--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <main
-  class="grid min-h-full place-items-center bg-white px-6 py-24 mb-0.2 sm:py-32 lg:px-8"
+  class="grid min-h-full place-items-center px-6 py-24 mb-0.2 sm:py-32 lg:px-8"
 >
   <div class="text-center">
     <p class="text-base font-semibold text-indigo-600">404</p>
