--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,63 +1,45 @@
-<div class="mx-auto max-w-[85vw] py-24 sm:px-6 sm:py-32 lg:px-8">
-  <div
-    class="relative isolate overflow-hidden bg-gray-900 px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0"
-  >
-    <svg
-      viewBox="0 0 1024 1024"
-      class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0"
-      aria-hidden="true"
-    >
-      <circle
-        cx="512"
-        cy="512"
-        r="512"
-        fill="url(#759c1415-0410-454c-8f7c-9a820de03641)"
-        fill-opacity="0.7"
-      />
-      <defs>
-        <radialGradient id="759c1415-0410-454c-8f7c-9a820de03641">
-          <stop stop-color="#7775D6" />
-          <stop offset="1" stop-color="#E935C1" />
-        </radialGradient>
-      </defs>
-    </svg>
-    <div
-      class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left"
-    >
-      <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
-        HARVEST AI
-      </h2>
-      <p class="mt-6 text-lg leading-8 text-gray-300">
-        ML crop recommendations for farmers to optimize yield, uses machine
-        learning to analyze agricultural data and recommend crops based on soil,
-        climate, and market demand for optimal yield.
-      </p>
-      <div
-        class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start"
-      >
-        <a
-          (click)="goToElement('feature-intro')"
-          class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
-          >Get started</a
-        >
-        <a
-          routerLink="/aim-of-project"
-          class="text-sm font-semibold leading-6 text-white"
-          >Learn more <span aria-hidden="true">→</span></a
-        >
+<section class="mb-1 0 background-radial-gradient shadow bottom">
+  <div class="px-6 py-12 md:px-12 text-center lg:text-left">
+    <div class="container mx-auto xl:px-32">
+      <div class="grid lg:grid-cols-2 gap-12 flex items-center">
+        <div class="mt-12 lg:mt-0">
+          <h1
+            class="text-5xl md:text-6xl xl:text-7xl font-bold tracking-tight mb-12"
+            style="color: hsl(218, 81%, 95%)"
+          >
+          HARVEST AI<br /><p class="mt-6 text-lg leading-8 text-gray-300">
+            ML crop recommendations for farmers to optimize yield, uses machine
+            learning to analyze agricultural data.
+          </p>
+          </h1>
+          <a
+            class="inline-block px-7 py-3 mr-2 bg-gray-200 text-gray-700 font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-gray-300 hover:shadow-lg focus:bg-gray-300 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-gray-400 active:shadow-lg transition duration-150 ease-in-out"
+            data-mdb-ripple="true"
+            data-mdb-ripple-color="light"
+            (click)="goToElement('feature-intro')"
+            role="button"
+            >Get started</a
+          >
+          <a
+            class="inline-block px-7 py-3 bg-transparent text-white font-medium text-sm leading-snug uppercase rounded focus:outline-none focus:ring-0 transition duration-150 ease-in-out"
+            data-mdb-ripple="true"
+            data-mdb-ripple-color="light"
+            routerLink="/aim-of-project"
+            role="button"
+            >Learn more</a
+          >
+        </div>
+        <div class="mb-12 lg:mb-0">
+          <img
+            src="assets/images/main one.jpg"
+            class="w-full rounded-lg shadow-lg"
+            alt=""
+          />
+        </div>
       </div>
     </div>
-    <div class="relative mt-16 h-80 lg:mt-8">
-      <img
-        class="absolute left-0 top-0 w-[57rem] max-w-none rounded-md bg-white/5 ring-1 ring-white/10"
-        src="https://source.unsplash.com/random/500*700/?crop"
-        alt="App screenshot"
-        width="1824"
-        height="1080"
-      />
-    </div>
   </div>
-</div>
+</section>
 <div id="feature-intro">
   <div
     class="mx-auto grid max-w-2xl grid-cols-1 items-center gap-x-8 gap-y-16 px-4 py-24 sm:px-6 sm:py-32 lg:max-w-7xl lg:grid-cols-2 lg:px-8"
@@ -85,24 +67,9 @@
           <dd class="mt-2 text-sm text-gray-500">
             Harvest AI's crop recommendation feature uses ML algorithms to
             provide personalized insights on the best crops to plant for optimal
-            yields and profitability. cover
+            yields and profitability.
           </dd>
         </div>
-
-        <div class="border-t border-gray-200 pt-4">
-          <dt class="font-medium text-gray-900">Feature Name</dt>
-          <dd class="mt-2 text-sm text-gray-500">Crop Yield Predictor</dd>
-        </div>
-
-        <div class="border-t border-gray-200 pt-4">
-          <dt class="font-medium text-gray-900">Description</dt>
-          <dd class="mt-2 text-sm text-gray-500">
-            Harvest AI predicts crop yields using machine learning models and
-            agricultural data analysis, enabling farmers to optimize their
-            management strategies.
-          </dd>
-        </div>
-
         <div class="border-t border-gray-200 pt-4">
           <dt class="font-medium text-gray-900">Feature Name</dt>
           <dd class="mt-2 text-sm text-gray-500">Fertilizer Recommendation</dd>
@@ -120,23 +87,23 @@
     </div>
     <div class="grid grid-cols-2 grid-rows-2 gap-4 sm:gap-6 lg:gap-8">
       <img
-        src="https://source.unsplash.com/random/?crop"
+        src="assets/images/pi1.jpg"
         alt=""
         class="feature-img rounded-lg bg-gray-100"
         width="1824"
       />
       <img
-        src="https://source.unsplash.com/random/?field"
+        src="assets/images/pi2.jpg"
         alt=""
         class="feature-img rounded-lg bg-gray-100"
       />
       <img
-        src="https://source.unsplash.com/random/?soil"
+        src="assets/images/pi3.jpg"
         alt=""
         class="feature-img rounded-lg bg-gray-100"
       />
       <img
-        src="https://source.unsplash.com/random/?chemicals"
+        src="assets/images/pi4.jpg"
         alt=""
         class="feature-img rounded-lg bg-gray-100"
       />
@@ -153,7 +120,7 @@
         class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row py-20"
       >
         <img
-          src="https://source.unsplash.com/640x480/?crop"
+          src="assets/images/crop.jpg"
           alt=""
           class="h-80 dark:bg-gray-500 aspect-video rounded-md shadow-sm"
         />
@@ -166,7 +133,7 @@
           </p>
           <a
             class="feature-section bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-            routerLink="/crop-recommendations"
+            routerLink="features/crop-recommendation"
             >Explore</a
           >
         </div>
@@ -175,29 +142,7 @@
         class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row-reverse"
       >
         <img
-          src="https://source.unsplash.com/640x480/?soil"
-          alt=""
-          class="h-80 dark:bg-gray-500 aspect-video rounded-md shadow-sm"
-        />
-        <div class="flex flex-col justify-center flex-1 p-6 dark:bg-gray-900">
-          <h3 class="text-3xl font-bold">Crop Yield Predictor</h3>
-          <p class="my-6 dark:text-gray-400">
-            Harvest AI predicts crop yields using machine learning models and
-            agricultural data analysis, enabling farmers to optimize their
-            management strategies.
-          </p>
-          <a
-            class="feature-section bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-            routerLink="/crop-yield-predictor"
-            >Explore</a
-          >
-        </div>
-      </div>
-      <div
-        class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"
-      >
-        <img
-          src="https://source.unsplash.com/640x480/?chemicals"
+          src="assets/images/fertilizer.jpg"
           alt=""
           class="h-80 dark:bg-gray-500 aspect-video rounded-md shadow-sm"
         />
@@ -210,7 +155,7 @@
           </p>
           <a
             class="feature-section bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
-            routerLink="/fertilizers-recommendations"
+            routerLink="features/fertilizer-prediction"
             >Explore</a
           >
         </div>
