--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -1,3 +1,37 @@
 a.feature-section {
   width: 100px;
 }
+.shadow {
+  background-color: hsl(218, 41%, 15%);
+  &.top {
+    box-shadow: 0px -15px 10px -15px hsl(218, 41%, 15%);
+  }
+  &.bottom {
+    box-shadow: 0px 15px 10px -15px hsl(218, 41%, 15%);
+  }
+  &.left {
+    box-shadow: -15px 0px 10px -15px hsl(218, 41%, 15%);
+  }
+  &.right {
+    box-shadow: 15px 0px 10px -15px hsl(218, 41%, 15%);
+  }
+}
+.background-radial-gradient {
+  background-color: hsl(218, 41%, 15%);
+  background-image: radial-gradient(
+      650px circle at 0% 0%,
+      hsl(218, 41%, 35%) 15%,
+      hsl(218, 41%, 30%) 35%,
+      hsl(218, 41%, 20%) 75%,
+      hsl(218, 41%, 19%) 80%,
+      transparent 100%
+    ),
+    radial-gradient(
+      1250px circle at 100% 100%,
+      hsl(218, 41%, 45%) 15%,
+      hsl(218, 41%, 30%) 35%,
+      hsl(218, 41%, 20%) 75%,
+      hsl(218, 41%, 19%) 80%,
+      transparent 100%
+    );
+}
