--- a/src/app/pages/aim-of-project/aim-of-project.component.html
+++ b/src/app/pages/aim-of-project/aim-of-project.component.html
@@ -7,14 +7,14 @@
           <div class="w-full px-3 sm:px-4 xl:w-1/2">
             <div class="py-3 sm:py-4">
               <img
-                src="https://source.unsplash.com/random/?crop"
+                src="assets/images/mo1.jpg"
                 alt=""
                 class="w-full rounded-2xl feature-img"
               />
             </div>
             <div class="py-3 sm:py-4">
               <img
-                src="https://source.unsplash.com/random/?soil"
+                src="assets/images/mo2.jpg"
                 alt=""
                 class="w-full rounded-2xl feature-img"
               />
@@ -23,7 +23,7 @@
           <div class="w-full px-3 sm:px-4 xl:w-1/2">
             <div class="relative z-10 my-4">
               <img
-                src="https://source.unsplash.com/random/?science"
+                src="assets/images/mo3.jpg"
                 alt=""
                 class="w-full rounded-2xl feature-img"
               />
