--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -117,7 +117,7 @@
     </h2>
     <div class="container mx-auto space-y-12">
       <div
-        class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row py-20"
+        class="flex flex-col overflow-hidden rounded-md shadow-sm lg:flex-row"
       >
         <img
           src="assets/images/crop.jpg"
