--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -2,7 +2,9 @@
 <div class="container my-24 px-6 mx-auto">
   <section class="mb-32 text-gray-800 text-center m-auto">
     <h2 class="text-3xl font-bold mb-12">Testimonials</h2>
-    <div class="grid md:grid-cols-3 gap-x-6 xl:gap-x-12">
+    <div
+      class="grid md:grid-cols-2 gap-x-6 xl:gap-x-12 gap-y-5 w-[80vw] mx-auto mt-5"
+    >
       <div
         *ngFor="let member of teamMembers; let i = index"
         [ngClass]="{
@@ -10,26 +12,25 @@
         }"
         class="justify-center"
       >
-        <div class="bg-white block rounded-lg shadow-lg">
-          <div class="relative overflow-hidden bg-no-repeat bg-cover">
-            <img [src]="member.image" class="w-full rounded-t-lg" />
-            <svg
-              class="absolute"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 1440 320"
-              style="left: 0; bottom: 0"
+        <div
+          class="flex flex-col rounded-md bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 md:max-w-xl md:flex-row max-h-70 shadow-md"
+        >
+          <img
+            class="h-80 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg"
+            [src]="member.image"
+            alt=""
+          />
+          <div class="flex flex-col justify-start p-6">
+            <h3
+              class="mb-2 text-xl font-medium text-neutral-800 dark:text-neutral-50"
             >
-              <path
-                fill="#fff"
-                d="M0,288L48,256C96,224,192,160,288,160C384,160,480,224,576,213.3C672,203,768,117,864,85.3C960,53,1056,75,1152,69.3C1248,64,1344,32,1392,16L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-              ></path>
-            </svg>
-          </div>
-          <div class="p-3">
-            <h5 class="text-lg font-bold mb-2">{{ member.name }}</h5>
-            <h6 class="font-medium text-blue-600 mb-4">{{ member.role }}</h6>
-            <p>
+              {{ member.name }}
+            </h3>
+            <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">
               {{ member.desc }}
+            </p>
+            <p class="text-xs text-neutral-500 dark:text-neutral-300 text-sky-600">
+              {{ member.role }}
             </p>
           </div>
         </div>
