--- a/src/app/features/crop-recommendations/crop-recommendations.component.html
+++ b/src/app/features/crop-recommendations/crop-recommendations.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <div
-  class="flex w-[85vw] mx-auto my-10 bg-teal-50 rounded drop-shadow-lg pt-5 pb-5"
+  class="lg:grid grid-rows-1 grid-flow-col gap-4 w-[60vw] mx-auto justify-between mt-[80px] mb-[100px] bg-teal-50 rounded drop-shadow-lg pt-5 pb-5 sm:flex-col my-3"
 >
-  <div class="form mx-5 h-[100%]">
+  <div class="form mx-5">
     <h1
       href="#"
       class="text-dark rounded-md px-3 py-2 text-sm font-medium"
@@ -129,17 +129,29 @@
           >
         </div>
       </div>
-      <button
-        type="submit"
-        mat-button
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-full px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      <div
+        class="inline-flex rounded-md shadow-sm w-[100%] mx-auto justify-between"
+        role="group"
       >
-        Submit
-      </button>
+        <button
+          type="submit"
+          mat-button
+          class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-l-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-blue-500 dark:focus:text-white"
+        >
+          Submit
+        </button>
+        <a
+          routerLink="/features/fertilizer-prediction"
+          mat-button
+          class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-l-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-blue-500 dark:focus:text-white"
+        >
+          Go to Fertilizer Recommendation
+        </a>
+      </div>
     </form>
   </div>
-  <div class="form-img w-[40%] mx-auto">
-    <img class="shadow-lg rounded-md" src="assets/images/crop.jpg" alt="" />
+  <div class="form-img mx-5">
+    <img src="assets/images/crop.jpg" class="rounded-md w-[100%] h-[100%]" />
   </div>
 </div>
 
