--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <section class="mb-1 0 background-radial-gradient shadow bottom">
   <div class="px-6 py-12 md:px-12 text-center lg:text-left">
     <div class="container mx-auto xl:px-32">
-      <div class="grid lg:grid-cols-2 gap-12 flex items-center">
+      <div class="grid lg:grid-cols-2 gap-12 items-center">
         <div class="mt-12 lg:mt-0">
           <h1
             class="text-5xl md:text-6xl xl:text-7xl font-bold tracking-tight mb-12"
@@ -110,7 +110,7 @@
     </div>
   </div>
   <section
-    class="p-4 lg:p-8 dark:bg-gray-800 dark:text-gray-100 w-[95%] m-auto"
+    class="p-4 lg:p-8 dark:bg-gray-800 dark:text-gray-100 w-[80%] mx-auto"
   >
     <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
       Feature Section
