--- a/src/app/features/fertilizers-recommendations/fertilizers-recommendations.component.html
+++ b/src/app/features/fertilizers-recommendations/fertilizers-recommendations.component.html
@@ -1,19 +1,19 @@
 <app-navbar></app-navbar>
 <div
-  class="flex w-[80vw] mx-auto my-6 bg-teal-50 rounded drop-shadow-lg pt-5 pb-5"
+  class="lg:grid grid-rows-1 grid-flow-col gap-4 w-[60vw] mx-auto justify-between mt-20 mb-20 bg-teal-50 rounded drop-shadow-lg pt-5 pb-5 sm:flex-col my-3"
 >
-  <div class="form mx-5 h-[100%]">
+  <div class="form mx-5">
     <h1
       href="#"
       class="text-dark rounded-md px-3 py-2 text-sm font-medium"
       aria-current="page"
     >
-    Fertilizer Recommendation
+      Fertilizer Recommendation
     </h1>
     <p class="mx-auto">
-      Harvest AI analyzes soil data
-      
-      to recommend optimal fertilizer <br> application strategies, taking into account crop type, growth stage, and other factors. 
+      Harvest AI analyzes soil data to recommend optimal fertilizer <br />
+      application strategies, taking into account crop type, growth stage, and
+      other factors.
     </p>
     <br />
     <form
@@ -137,20 +137,31 @@
           </select>
         </div>
       </div>
-      <button
-        type="submit"
-        mat-button
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-full px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      <div
+        class="inline-flex rounded-md shadow-sm w-[100%] mx-auto justify-between"
+        role="group"
       >
-        Submit
-      </button>
+        <button
+          type="submit"
+          mat-button
+          class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-l-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-blue-500 dark:focus:text-white"
+        >
+          Submit
+        </button>
+        <a
+          routerLink="/features/crop-recommendation"
+          mat-button
+          class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-l-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-blue-500 dark:focus:text-white"
+        >
+          Go to Crop Recommendation
+        </a>
+      </div>
     </form>
   </div>
-  <div class="form-img w-[40%] mr-5">
+  <div class="form-img mx-5">
     <img
-      class="shadow-lg rounded-md mr-3"
       src="assets/images/fertilizer.jpg"
-      alt=""
+      class="rounded-md w-[100%] h-[100%]"
     />
   </div>
 </div>
