--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -7,10 +7,11 @@
             class="text-5xl md:text-6xl xl:text-7xl font-bold tracking-tight mb-12"
             style="color: hsl(218, 81%, 95%)"
           >
-          HARVEST AI<br /><p class="mt-6 text-lg leading-8 text-gray-300">
-            ML crop recommendations for farmers to optimize yield, uses machine
-            learning to analyze agricultural data.
-          </p>
+            HARVEST AI<br />
+            <p class="mt-6 text-lg leading-8 text-gray-300">
+              ML crop recommendations for farmers to optimize yield, uses
+              machine learning to analyze agricultural data.
+            </p>
           </h1>
           <a
             class="inline-block px-7 py-3 mr-2 bg-gray-200 text-gray-700 font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-gray-300 hover:shadow-lg focus:bg-gray-300 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-gray-400 active:shadow-lg transition duration-150 ease-in-out"
@@ -42,7 +43,7 @@
 </section>
 <div id="feature-intro">
   <div
-    class="mx-auto grid max-w-2xl grid-cols-1 items-center gap-x-8 gap-y-16 px-4 py-24 sm:px-6 sm:py-32 lg:max-w-7xl lg:grid-cols-2 lg:px-8"
+    class="mx-auto grid max-w-2xl grid-cols-1 items-center gap-x-8 gap-y-16 px-4 py-24 sm:px-6 sm:py-32 lg:max-w-7xl lg:grid-cols-2 lg:px-8 w-[80vw]"
   >
     <div>
       <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
@@ -110,7 +111,7 @@
     </div>
   </div>
   <section
-    class="p-4 lg:p-8 dark:bg-gray-800 dark:text-gray-100 w-[80%] mx-auto"
+    class="p-4 lg:p-8 dark:bg-gray-800 dark:text-gray-100 w-[80vw] mx-auto sm:flex flex-col my-2"
   >
     <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
       Feature Section
